# xstroke

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  action.c  action.h  action_item.c  action_item.h  anchor_engine.c  anchor_engine.h  args.c  args.h  brush-image.h  brush.c  config.h  config.h.in  config.status  configure  configure.ac  control_win.c  control_win.h  dir_engine.c  dir_engine.h  feature.c  feature.h  fixed.c  fixed.h  gesture.c  gesture.h  grid.c  grid.h  grid_engine.c  grid_engine.h  log.c  (+43 more)
.deps/: action.Po  action_item.Po  anchor_engine.Po  args.Po  backing.Po  bresenham.Po  brush.Po  control_win.Po  dir_engine.Po  feature.Po  fixed.Po  gesture.Po  grid.Po  grid_engine.Po  log.Po  matrix.Po  option.Po  raw_engine.Po  rec.Po  rec_callback.Po  rec_engine.Po  rec_history.Po  rec_lex.Po  rec_mode.Po  rec_parse.Po  regex_feature.Po  sprintf_alloc.Po  stroke.Po  tray.Po  xlp.Po  xlp_callback.Po  xlp_color.Po  xlp_timeout.Po  xlp_win.Po  xstroke.Po
etc/: alphabet
